fixing rows sticking out

--- a/style.css
+++ b/style.css
@@ -201,8 +201,8 @@
 
 #team-img {
   /*border-radius: 50%;*/
-  width: 200px;
-  height: 200px;
+  width: 130px;
+  height: 180px;
 }
 
 #team-desc {
